able to create and start containers from web app, made todo list

--- a/webmod/templates/index.html
+++ b/webmod/templates/index.html
@@ -5,6 +5,10 @@
 		<title>OgreDock</title>
 	</head>
 	<body>
-		{{ . }}
+		<h1> {{ . }} </h1>
+		<h2>	Links </h2> 
+			<ol>
+				<li> <a href="/cmv">Container Management</a> </li>
+			</ol>
 	</body>
 </html>
