--- a/webmod/templates/ctable.html
+++ b/webmod/templates/ctable.html
@@ -2,30 +2,66 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Container View</title>
+		<title>Container Management</title>
 	</head>
 	<body>
-		<table>
-		<tr>
-			<th>Name</th>
-			<th>State</th>
-			<th>MacAddress</th>
-			<th>IPAddress</th>
-			<th>Gateway</th>
-			<th>Net</th>
-		</tr>
-		{{ range . }}
-		<tr>
-			<td> {{ index .Names 0 }} </td>
-			<td> {{ .State }} </td>
-			<td> {{ (index .NetworkSettings.Networks "bridge").MacAddress }} </td>
-			<td> {{ (index .NetworkSettings.Networks "bridge").IPAddress }} </td>
-			<td> {{ (index .NetworkSettings.Networks "bridge").Gateway }} </td>
-			{{ range $key, $value := .NetworkSettings.Networks }}
-			<td> {{ $key }} </td>
-			{{ end }}
-		</tr>
-		{{ end}}
+		<form action="/cmv" method ="post">
+			<table>
+				<tr>
+					<td>
+						<input type="submit" name="start_button" value="Start">
+					</td>
+					<td>
+						<input type="submit" name="stop_button" value="Stop">
+					</td>
+					<td>
+						<label> Name </label>
+						<input type="text" name="Name" size=10em>
+					</td>
+					<td>
+						<label> Net </label>
+						<input type="text" name="Net" size=10em>
+					</td>
+					<td>
+						<label> Img </label>
+						<input type="text" name="Img"  size=10em>
+					</td>
+					<td>
+						<input type="submit" name="create_button" value="Create">
+					</td>
+					<td>
+						<input type="submit" name="destroy_button" value="Destroy">
+					</td>
+				</tr>
+			</table>
+		<br>
+		<table name="ctable">
+			<tr>
+				<th>Name</th>
+				<th>State</th>
+				<th>MacAddress</th>
+				<th>IPAddress</th>
+				<th>Gateway</th>
+				<th>Net</th>
+			</tr>
+			{{ range . }}
+			<tr>
+				<td> {{ index .Names 0 }} </td>
+				<td> {{ .State }} </td>
+				<td> {{ (index .NetworkSettings.Networks "bridge").MacAddress }} </td>
+				<td> {{ (index .NetworkSettings.Networks "bridge").IPAddress }} </td>
+				<td> {{ (index .NetworkSettings.Networks "bridge").Gateway }} </td>
+				{{ range $key, $value := .NetworkSettings.Networks }}
+				<td> {{ $key }} </td>
+				{{ end }}
+			</tr>
+			{{ end}}
 		</table>
 	</body>
+	<style>
+		table, td, th {
+			padding-left: 1em;
+			text-align: left;
+		}
+	</style>
 </html>
