Building out network management interface

--- a/webmod/templates/index.html
+++ b/webmod/templates/index.html
@@ -9,6 +9,8 @@
 		<h2>	Links </h2> 
 			<ol>
 				<li> <a href="/cmv">Container Management</a> </li>
+				<li> <a href="/nmv">Network Management</a> </li>
+				<li> <a href="/bgv">Bulk Generation</a> </li>
 			</ol>
 	</body>
 </html>
