--- a/webmod/templates/index.html
+++ b/webmod/templates/index.html
@@ -6,11 +6,12 @@
 	</head>
 	<body>
 		<h1> {{ . }} </h1>
+		<img src="/webmod/public/images/ogredock.png" width="400" height="75">
 		<h2>	Links </h2> 
 			<ol>
 				<li> <a href="/cmv">Container Management</a> </li>
 				<li> <a href="/nmv">Network Management</a> </li>
-				<li> <a href="/bgv">Bulk Generation</a> </li>
+				<li> <a href="/cgv">Container Generation</a> </li>
 			</ol>
 	</body>
 </html>
