--- a/webmod/templates/generate.html
+++ b/webmod/templates/generate.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Container Generation</title>
+		<link rel="stylesheet" href="/webmod/public/ogStyle.css">
 	</head>
 	<body>
 		<form action="/cgv" method ="post">
