--- a/webmod/templates/index.html
+++ b/webmod/templates/index.html
@@ -2,13 +2,14 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>OgreDock</title>
+		<title>OgreDock Index</title>
 	</head>
 	<body>
 		<h1> {{ . }} </h1>
 		<img src="/webmod/public/images/ogredock.png" width="400" height="75">
 		<h2>	Links </h2> 
 			<ol>
+				<li> <a href="/mwv">Home</a> </li>
 				<li> <a href="/cmv">Container Management</a> </li>
 				<li> <a href="/nmv">Network Management</a> </li>
 				<li> <a href="/cgv">Container Generation</a> </li>
